--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "react-image-lightbox": "^5.1.4",
+    "styled-components": ">= 5.0"
+  },
+  "peerDependencies": {
+    "gatsby-plugin-image": "^2.0",
+    "react": ">=16",
+    "styled-components": ">= 5.0"
   },
   "devDependencies": {
     "@types/react": "17.0.39",
