--- a/.github/workflows/action_gatsby_bash.yml
+++ b/.github/workflows/action_gatsby_bash.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Dependencies
-        run: npm install
+        run: | 
+          npm install
+          npm install -g gatsby-cli
       - name: Bash Gatsby
         run: gatsby build
