--- a/.github/workflows/action_gatsby_bash.yml
+++ b/.github/workflows/action_gatsby_bash.yml
@@ -20,4 +20,6 @@ jobs:
           npm install
           npm install -g gatsby-cli
      - name: Bash Gatsby
-       run: gatsby build
+       run: |
+         gatsby build
+         ls -lah
