--- a/.github/workflows/action_gatsby_bash.yml
+++ b/.github/workflows/action_gatsby_bash.yml
@@ -23,3 +23,8 @@ jobs:
        run: |
          gatsby build
          ls -lah public
+     - name: Deploy 🚀
+       uses: JamesIves/github-pages-deploy-action@v4.2.5
+       with:
+         branch: gh-pages # The branch the action should deploy to.
+         folder: public # The folder the action should deploy.
